[package]
name = "coolhead"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coolhead"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-embedded-hal = { version = "0.3.1", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    # "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.6.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
    "rp2040",
    "time-driver",
] }
embassy-futures = { version = "0.1.0" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
panic-probe = "1.0.0"
static_cell = "2.1.1"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
embassy-usb = "0.5.0"
critical-section = "1.2.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
